<?xml version="1.0" encoding="utf-8"?>


<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/gitResultActivitySwipeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@null">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/gitResultActivityProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:theme="@style/BlackAcccent"
            android:visibility="invisible"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gitResultActivityRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
