...
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/repo_item_image_view">

            <TextView
                android:id="@+id/repo_item_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/object_text_color_black"
                android:text="@{repoObject.repoName}"/>

            <TextView
...
